<resources>
    <string name="app_name">GoggleBird</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="temp">Temp</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="settings">SETTINGS</string>
    <string name="max_distance">Max distance</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="km">KM</string>
    <string name="miles">MILES</string>
    <string name="max_distance_label">Max distance:</string>

    <string name="and">&amp;</string>
</resources>